@@ -18,9 +18,11 @@
 
 ## -*- texinfo -*-
 ## @deftypefn {Function File} {} tinv (@var{x}, @var{n})
-## For each component of @var{x}, compute the quantile (the inverse of
-## the CDF) at @var{x} of the t (Student) distribution with parameter
-## @var{n}.
+## For each probability value @var{x}, compute the the inverse of the
+## cumulative distribution function (CDF) of the t (Student)
+## distribution with degrees of freedom @var{n}.  This function is
+## analagous to looking in a table for the t-value of a single-tailed
+## distribution.
 ## @end deftypefn
 
 ## For very large n, the "correct" formula does not really work well,
