@@ -1,3 +1,8 @@
+2008-04-29  Jonathan Stickel  <jjstickel@vcn.com>
+
+	* statistics/distributions/tcdf.m, statistics/distributions/tinv.m:
+	Doc fix.
+
 2008-04-25  John W. Eaton  <jwe@octave.org>
 
 	* miscellaneous/dbstack.m: New function.
